ADD: List pokemon by number

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,57 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <a href="#">pokéDex</a>
+        <img src="./img/Sin título-2.png" width="240" height="118" alt="">
+        <a href="#">Histograma</a>
+      </header>
+      <main>
+        <section>
+          <select name="" id="">
+            <option value="">type</option>
+            <option value="">soft</option>
+            <option value="">weight</option>
+            <option value="">cp</option>
+            <option value="">hp</option>
+          </select>
+          <div>
+            <img src="" alt="">
+            <input type="text" placeholder="Search pokemon">
+          </div>
+          <div>
+            <button>up</button>
+            <button>down</button>
+          </div>
+          <div>
+            <button>left</button>
+            <button>rigth</button>
+          </div>
+        </section>
+        <section>
+          <div>
+          </div>
+          <div>
+            <table id="pokemonList">
+              <!-- <tbody >
+                <tr>
+                  <td>
+                    <p>#001</p>
+                    <p>imagen</p>
+                    <p>Nombre</p>
+                  </td>
+                </tr>
+              </tbody> -->
+            </table>
+          <div>
+            <button>Derecha</button>
+            <button>Izquierda</button>
+          </div>
+        </section>
+      </main>
+    </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
+<img src="" alt="">
