ADD: event type change for Types of Pokemons

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,19 @@
       </header>
       <main>
         <section>
-          <select name="" id="">
-            <option value="">type</option>
-            <option value="">soft</option>
-            <option value="">weight</option>
-            <option value="">cp</option>
-            <option value="">hp</option>
+          <select name="" id="" class="typePokemon">
+        <optgroup  label="Type"> 
+              <option value="water">water</option>
+              <option value="fire">fire</option>
+              <option value="ice">ice</option>
+              <option value="rock">rock</option>
+              <option value="normal">normal</option>
+              <option value="flying">flying</option>
+            </optgroup> 
+            <optgroup label="">Soft</optgroup>
+            <optgroup label="">Weight</optgroup>
+            <optgroup label="">cp</optgroup>
+            <optgroup label="">hp</optgroup>
           </select>
           <div>
             <img src="" alt="">
