ADD: layout pokemon list right

--- a/src/index.html
+++ b/src/index.html
@@ -39,30 +39,78 @@
               <input type="text"  placeholder="Search pokemon">
             </div>
             <div>
-              <button>up</button>
-              <button>down</button>
+              <button  class="btnUp"></button>
+              <button class="btnDown"></button>
             </div>
           </section>
-
-          <section>
-            <div>
-              <table id="pokemonList">
-                <!-- <tbody >
-                  <tr>
-                    <td>
+          <section class="main__right-list">
+            <div class="right__list-ul">
+              <!-- <table id="pokemonList" >
+                <tbody class="main__right-table">
+                  <tr class="right__table-tr"> 
+                    <td class="right__table-td">
                       <p>#001</p>
-                      <p>imagen</p>
+                      <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
                       <p>Nombre</p>
-                    </td>
-                  </tr>
-                </tbody> -->
-              </table>
-          </section>
-          <section>
-            <div>
-              <button>left</button>
-              <button>rigth</button>
-            </div>
+                    </td>td>
+                     
+                </tbody>
+              </table> -->
+              <ul class="right__ul">
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+              </ul>
+              <ul class="right__ul">
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+              </ul>
+              <ul class="right__ul">
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+                <li class="right__ul-li">
+                  <p>#001</p>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/001.png" alt="">
+                  <span>Nombre</span>
+                </li>
+              </ul>
+              <div class="right_btn">
+                <button class="btnLeft"></button>
+                <button class="btnRigth"></button>
+              </div>
           </section>
       </main>
     </div>
