ADD: event click previous and next

--- a/src/index.html
+++ b/src/index.html
@@ -141,8 +141,8 @@
               </ul>
             </div> -->
             <div class="right_btn">
-              <button class="btnLeft"></button>
-              <button class="btnRigth"></button>
+              <button class="btnLeft" id="previousButton"></button>
+              <button class="btnRigth" id="nextButton"></button>
             </div>
           </section>
         </section>
