--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,48 @@
         <section class="container__main-right">
           <section class="main__right-search" multi>
             <select name="" id="" class="typePokemon btnFilter">
+              <option value="all">All</option>
               <optgroup label="Type">
-                <option value="water">water</option>
-                <option value="fire">fire</option>
-                <option value="ice">ice</option>
-                <option value="rock">rock</option>
-                <option value="normal">normal</option>
-                <option value="flying">flying</option>
+                <option value="bug">Bug</option>
+                <option value="dark">Dark</option>
+                <option value="dragon">Dragon</option>
+                <option value="electric">Electric</option>
+                <option value="fairy">Fairy</option>
+                <option value="fighting">Fighting</option>
+                <option value="fire">Fire</option>
+                <option value="flying">Flying</option>
+                <option value="ghost">Ghost</option>
+                <option value="grass">Grass</option>
+                <option value="ground">Ground</option>
+                <option value="ice">Ice</option>
+                <option value="normal">Normal</option>
+                <option value="poison">Poison</option>
+                <option value="psychic">Psychic</option>
+                <option value="rock">Rock</option>
+                <option value="steel">Steel</option>
+                <option value="water">Water</option>
               </optgroup>
-              <option label="">Weight</option>
-              <option label="">cp</option>
-              <option label="">hp</option>
-              <option label="">Soft</option>
+              <option label="Weaknesses">
+                <option value="bug">Bug</option>
+                <option value="dark">Dark</option>
+                <option value="dragon">Dragon</option>
+                <option value="electric">Electric</option>
+                <option value="fairy">Fairy</option>
+                <option value="fighting">Fighting</option>
+                <option value="fire">Fire</option>
+                <option value="flying">Flying</option>
+                <option value="ghost">Ghost</option>
+                <option value="grass">Grass</option>
+                <option value="ground">Ground</option>
+                <option value="ice">Ice</option>
+                <option value="normal">Normal</option>
+                <option value="poison">Poison</option>
+                <option value="psychic">Psychic</option>
+                <option value="rock">Rock</option>
+                <option value="steel">Steel</option>
+                <option value="water">Water</option>
+              </option>
+              <optgroup label="">Weaknesses</optgroup>
               <option value="" selected></option>
             </select>
             <div class="inputSearch">
@@ -56,10 +86,8 @@
               <button class="btnDown"></button>
             </div>
           </section>
-          <section class="main__right-list" >
-            <section  class="right-list-card" id="pokemonList">
-
-            </section>
+          <section class="main__right-list">
+            <section class="right-list-card" id="pokemonList"></section>
             <!-- <div class="right__list-ul">
               <ul class="right__ul">
                 <li class="right__ul-li">
