ADD: Filter pokemon by resistant

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,6 @@
             </section>
           </section>
           <section class="main__left-info"></section>
-          <section></section>
         </section>
         <section class="container__main-right">
           <section class="main__right-search" multi>
@@ -54,7 +53,7 @@
                 <option value="steel">Steel</option>
                 <option value="water">Water</option>
               </optgroup>
-              <option label="Weaknesses">
+              <optgroup label="Weaknesses">
                 <option value="bug">Bug</option>
                 <option value="dark">Dark</option>
                 <option value="dragon">Dragon</option>
@@ -74,7 +73,12 @@
                 <option value="steel">Steel</option>
                 <option value="water">Water</option>
               </option>
-              <optgroup label="">Weaknesses</optgroup>
+              </optgroup>
+              <optgroup label="Resistant">
+                <option value="bug">Bug</option>
+                <option value="dark">Dark</option>
+                <option value="dragon">Dragon</option>
+              </optgroup>
               <option value="" selected></option>
             </select>
             <div class="inputSearch">
