upDate: filter uniqueupDate: filter unique by type weak, resistant

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
         <section class="container__main-right">
           <section class="main__right-search" multi>
             <select name="" id="" class="typePokemon btnFilter">
-              <option value="all">All</option>
-              <optgroup label="Type">
+              <option value="all" >All</option>
+              <optgroup label="TYPE" id="filterType">
                 <option value="bug">Bug</option>
                 <option value="dark">Dark</option>
                 <option value="dragon">Dragon</option>
@@ -53,7 +53,7 @@
                 <option value="steel">Steel</option>
                 <option value="water">Water</option>
               </optgroup>
-              <optgroup label="Weaknesses">
+              <optgroup label="WEAKNESSES" id="filterWeaknesses">
                 <option value="bug">Bug</option>
                 <option value="dark">Dark</option>
                 <option value="dragon">Dragon</option>
@@ -66,7 +66,6 @@
                 <option value="grass">Grass</option>
                 <option value="ground">Ground</option>
                 <option value="ice">Ice</option>
-                <option value="normal">Normal</option>
                 <option value="poison">Poison</option>
                 <option value="psychic">Psychic</option>
                 <option value="rock">Rock</option>
@@ -74,10 +73,25 @@
                 <option value="water">Water</option>
               </option>
               </optgroup>
-              <optgroup label="Resistant">
+              <optgroup label="RESISTANT" id="filterResistant">
                 <option value="bug">Bug</option>
                 <option value="dark">Dark</option>
                 <option value="dragon">Dragon</option>
+                <option value="electric">Electric</option>
+                <option value="fairy">Fairy</option>
+                <option value="fighting">Fighting</option>
+                <option value="fire">Fire</option>
+                <option value="flying">Flying</option>
+                <option value="ghost">Ghost</option>
+                <option value="grass">Grass</option>
+                <option value="ground">Ground</option>
+                <option value="ice">Ice</option>
+                <option value="normal">Normal</option>
+                <option value="poison">Poison</option>
+                <option value="psychic">Psychic</option>
+                <option value="rock">Rock</option>
+                <option value="steel">Steel</option>
+                <option value="water">Water</option>
               </optgroup>
               <option value="" selected></option>
             </select>
