ADD: create the function of search pokemon by name

--- a/src/index.html
+++ b/src/index.html
@@ -98,11 +98,11 @@
             </select>
             <div class="inputSearch">
               <img src="./img/search.png" />
-              <input type="text" placeholder="Search pokemon" />
+              <input type="text" id="searchText" placeholder="Search pokemon" />
             </div>
             <div>
-              <button class="btnUp"></button>
-              <button class="btnDown"></button>
+              <button class="btnUp" id="upButton"></button>
+              <button class="btnDown" id="downButton"></button>
             </div>
           </section>
           <section class="main__right-list">
