ADD: create the function sortData

--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,8 @@
               <input type="text" id="searchText" placeholder="Search pokemon" />
             </div>
             <div>
-              <button class="btnUp" id="upButton"></button>
-              <button class="btnDown" id="downButton"></button>
+              <button class="btnUp" id="upButton" value="btnup"></button>
+              <button class="btnDown" id="downButton" value="btndown"></button>
             </div>
           </section>
           <section class="main__right-list">
