ADD: function redertop10 of pokemons

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="root" class="root">
       <header class="container__header">
-        <a href="#" class="container__header-text">pokéDex</a>
+        <a href="#" class="container__header-text" id="btnOpenTop10">poke10</a>
         <img
           src="./img/Sin título-2.png"
           width="240.3"
@@ -116,6 +116,86 @@
         </section>
       </main>
     </div>
+    <section id="modal" class="modal">
+      <article id="popup"class="popup">
+        <a href="#" id="btnClosePopup" class="btn-close-popup">x</a>
+        <section class="modal__container-top10">
+          <h3> TOP 10 POKEMON WITH MAX-CP </h3>
+             <ul class="container__card" id="card">
+              <!--<li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li>
+              <li class="card-top10">
+                <figure>
+                  <img src="https://www.serebii.net/pokemongo/pokemon/002.png" alt="">
+                </figure>
+                <p>nombre</p>
+                <p>Max-cp: 4187</p>
+              </li> -->
+            </ul>
+        </section>
+      </article>
+    </section>
     <script src="main.js" type="module"></script>
   </body>
 </html>
